2005-12-19  Jim Huang  <jserv@kaffe.org>

	* configure.ac: Use AS_HELP_STRING with AC_ARG_ENABLE for better
	expression.

2005-12-15  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/sitelistdlg.cpp:
	(CSiteListDlg::LoadSiteList): Fix some problem with icons of treeview.

2005-12-11  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/view/telnetcon.h,
	src/view/telnetview.cpp,
	src/view/telnetcon.cpp,
	src/view/telnetview.h,
	configure.ac: --disable-mouse for compiling without Mouse Support.
	
2005-12-11  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/view/telnetcon.h,
	src/view/telnetview.cpp,
	src/view/telnetcon.cpp: coordinate with maple bbs for Mouse Support.

2005-12-08  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/core/termview.cpp,
	src/core/termview.h,
	src/view/telnetview.cpp,
	src/view/telnetview.h: add Mouse Wheel Scrolling Support for menu and list.

	* src/mainframe.cpp: add myself as developer in About Dialog.

	* TODO: update
	
2005-12-05  Youchen Lee  <copyleft@utcr.org>

	* src/mainframe.cpp: CMainFrame::OnNotebookPopupMenu, added "Add to
	Favorites" item.

	* po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po: updated related po files.

2005-12-05  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/core/termview.cpp,
	src/core/termview.h,
	src/view/telnetcon.h,
	src/view/telnetview.cpp,
	src/view/telnetcon.cpp,
	src/view/telnetview.h: add Mouse Support for menu and list click. Current
	code is a little ugly and will be reworked soon.

	* TODO: metion ugly code of mouse support.

	* AUTHORS: add myself.

2005-12-04  Youchen Lee  <copyleft@utcr.org>

	* src/mainframe.h,
	src/mainframe.cpp: added CMainFrame::OnNotebookPopupMenu -- show popup-menu
	with "Close" and "Reconnect" menu items when right check mouse botton on 
	connection tabs.
	
	* po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po: updated related po files.

2005-12-04  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po : revise po files.
